reflect changed code

--- a/notebooks/P00_pipeline.ipynb
+++ b/notebooks/P00_pipeline.ipynb
@@ -50,67 +50,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 2-1. Query Partitioning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['용감한', '형제', '작곡', '노래', '장르']"
+       "['제니', '소속', '그룹']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "user_query = '용감한 형제가 작곡한 노래의 장르는?'\n",
-    "# user_query = '뱅뱅뱅 부른 음악그룹의 소속사는?'\n",
-    "# user_query = 'This Love 부른 음악가의 소속 음악 그룹은?'\n",
-    "query_terms = rm.tokenize_query(user_query)\n",
+    "# user_input = '가수 태연의 첫 데뷔곡은?'\n",
+    "# user_input = '뱅뱅뱅 부른 음악그룹의 소속사는?'\n",
+    "# user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
+    "# user_input = '장르가 발라드인 노래'\n",
+    "# user_input = '버벌진트가 피처링한 노래'\n",
+    "# user_input = '소녀시대의 리더는?'\n",
+    "user_input = '제니의 소속 그룹'\n",
+    "# user_input = '레인을 작곡한 사람'\n",
+    "query_terms = rm.tokenize_query(user_input)\n",
     "query_terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['용감한 형제 작곡 노래 장르'],\n",
-       " ['용감한', '형제 작곡 노래 장르'],\n",
-       " ['용감한 형제', '작곡 노래 장르'],\n",
-       " ['용감한 형제 작곡', '노래 장르'],\n",
-       " ['용감한 형제 작곡 노래', '장르'],\n",
-       " ['용감한', '형제', '작곡 노래 장르'],\n",
-       " ['용감한', '형제 작곡', '노래 장르'],\n",
-       " ['용감한', '형제 작곡 노래', '장르'],\n",
-       " ['용감한 형제', '작곡', '노래 장르'],\n",
-       " ['용감한 형제', '작곡 노래', '장르'],\n",
-       " ['용감한 형제 작곡', '노래', '장르'],\n",
-       " ['용감한', '형제', '작곡', '노래 장르'],\n",
-       " ['용감한', '형제', '작곡 노래', '장르'],\n",
-       " ['용감한', '형제 작곡', '노래', '장르'],\n",
-       " ['용감한 형제', '작곡', '노래', '장르'],\n",
-       " ['용감한', '형제', '작곡', '노래', '장르']]"
+       "[['제니 소속 그룹'], ['제니', '소속 그룹'], ['제니 소속', '그룹'], ['제니', '소속', '그룹']]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['용감한 형제', '작곡', '노래', '장르']"
+       "['제니', '소속', '그룹']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,17 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track', 'skmo:Genre'),\n",
-       " ('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track', 'skmo:hasGenre')]"
+       "[('skmo:제니', 'mo:member_of', 'foaf:Group'),\n",
+       " ('skmo:제니', 'schema:affiliation', 'foaf:Group')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,19 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
-       "  ('mo:Track', 'Any P', 'skmo:Genre')],\n",
-       " [('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
-       "  ('mo:Track', 'skmo:hasGenre', 'owl:Thing')]]"
+       "[[('skmo:제니', 'mo:member_of', 'foaf:Group')],\n",
+       " [('skmo:제니', 'schema:affiliation', 'foaf:Group')]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,22 +198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.7517241379310344,\n",
-       "  [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
-       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]),\n",
-       " (0.7517241379310344,\n",
-       "  [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
-       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
-       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')])]"
+       "[(0.5,\n",
+       "  [('foaf:Person(skmo:제니)', 'mo:member_of', 'mo:MusicGroup'),\n",
+       "   ('mo:MusicGroup', 'rdfs:subClassOf', 'foaf:Group')])]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +228,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('foaf:Person(skmo:제니)', 'mo:member_of', 'mo:MusicGroup'),\n",
+       " ('mo:MusicGroup', 'rdfs:subClassOf', 'foaf:Group')]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_query_graph = sc.select_query_graph(query_graph)\n",
+    "final_query_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('foaf:Person(skmo:제니)', 'mo:member_of', 'mo:MusicGroup')]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relation_triples = sc.extract_relation_triples(final_query_graph)\n",
+    "relation_triples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -261,18 +281,30 @@
       "SELECT DISTINCT ?target \n",
       "WHERE\n",
       "{\n",
-      "    ?x0 skmo:isComposedBy skmo:용감한_형제; skmo:hasGenre ?target\n",
-      "}\n",
-      "http://www.sktelecom.com/skmo/k-pop\n",
-      "http://www.sktelecom.com/skmo/R&B\n",
-      "http://www.sktelecom.com/skmo/hip_hop\n"
+      "    skmo:제니 mo:member_of ?target\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "knows_query = sc.generate_query(query_graph)\n",
-    "print(knows_query)\n",
-    "\n",
+    "knows_query = sc.generate_query(relation_triples)\n",
+    "print(knows_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://www.sktelecom.com/skmo/블랙핑크\n"
+     ]
+    }
+   ],
+   "source": [
     "result = sc.excute_query(knows_query)\n",
     "for r in result:\n",
     "    print(r['target'])"
