--- a/notebooks/P07_sparql_conversion.ipynb
+++ b/notebooks/P07_sparql_conversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
-      "\n",
-      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import rdflib\n",
     "from mapping import ResourceMapper\n",
@@ -35,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,71 +54,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0.0,\n",
-       "  [('mo:MusicGroup(skmo:빅뱅)', 'schema:affiliation', 'foaf:Organization'),\n",
-       "   ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]),\n",
-       " (0.0,\n",
-       "  [('skmo:MusicArtist(skmo:빅뱅)', 'schema:affiliation', 'foaf:Organization'),\n",
-       "   ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]),\n",
-       " (0.0,\n",
-       "  [('mo:MusicGroup(skmo:빅뱅)', 'schema:affiliation', 'foaf:Organization'),\n",
-       "   ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]),\n",
-       " (0.0,\n",
-       "  [('skmo:MusicArtist(skmo:빅뱅)', 'schema:affiliation', 'foaf:Organization'),\n",
-       "   ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]),\n",
-       " (0.0,\n",
-       "  [('mo:MusicGroup(skmo:빅뱅)', 'schema:affiliation', 'foaf:Organization'),\n",
-       "   ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]),\n",
-       " (0.0,\n",
-       "  [('skmo:MusicArtist(skmo:빅뱅)', 'schema:affiliation', 'foaf:Organization'),\n",
-       "   ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')])]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# user_input = '가수 태연의 첫 데뷔곡은?'\n",
+    "# user_input = '뱅뱅뱅 부른 음악그룹의 소속사는?'\n",
     "# user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
-    "user_input = '뱅뱅뱅 부른 빅뱅의 소속사는?'\n",
+    "# user_input = '장르가 발라드인 노래'\n",
+    "# user_input = '버벌진트가 피처링한 노래'\n",
+    "# user_input = '소녀시대의 리더는?'\n",
+    "user_input = '제니의 소속 그룹'\n",
     "resource_combination = rm.process(user_input)\n",
-    "conceptual_graph = cgg.generate_conceptual_graph(resource_combination)\n",
-    "query_graph = qgg.generate_query_graph(conceptual_graph)\n",
-    "query_graph"
+    "conceptual_graph = cgg.generate_all_conceptual_graph(resource_combination)\n",
+    "query_graph = qgg.generate_query_graph(conceptual_graph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('mo:MusicGroup(skmo:빅뱅)', 'schema:affiliation', 'foaf:Organization'),\n",
-       " ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')]"
+       "[('foaf:Person(skmo:제니)', 'mo:member_of', 'mo:MusicGroup'),\n",
+       " ('mo:MusicGroup', 'rdfs:subClassOf', 'foaf:Group')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_query_graph = sorted(query_graph, key=lambda x: (x[0], len(x[1])))[0][1]\n",
+    "final_query_graph = sorted(query_graph, key=lambda x: (len(x[1]), -x[0]))[0][1]\n",
     "final_query_graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -155,10 +120,10 @@
       "SELECT DISTINCT ?target\n",
       "WHERE\n",
       "{\n",
-      "    skmo:빅뱅 schema:affiliation ?target\n",
+      "    skmo:제니 mo:member_of ?target\n",
       "}\n",
       "\n",
-      "http://www.sktelecom.com/skmo/YG_엔터테인먼트\n"
+      "http://www.sktelecom.com/skmo/블랙핑크\n"
      ]
     }
    ],
@@ -169,13 +134,20 @@
     "WHERE\n",
     "\"\"\"\n",
     "prev_s = ''\n",
-    "var_dict = {relation_triples[-1][-1]:'?target'}\n",
+    "if relation_triples[-1][-1][-1] == ')':\n",
+    "    target = relation_triples[-1][0]\n",
+    "else:\n",
+    "    target = relation_triples[-1][-1]\n",
+    "var_dict = {target:'?target'}\n",
     "c = itertools.count()\n",
     "\n",
     "knows_query += '{'\n",
     "\n",
     "\n",
     "for s,p,o in relation_triples:\n",
+    "    if s[-1] == ')' and o[-1] == ')':\n",
+    "        continue\n",
+    "\n",
     "    # domain이 instance 일때\n",
     "    if s[-1] == ')':\n",
     "        s_var = s[:-1].split('(')[-1]\n",
@@ -217,35 +189,6 @@
     "\n",
     "for row in qres:\n",
     "    print(row['target'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://www.sktelecom.com/skmo/YG_엔터테인먼트\n"
-     ]
-    }
-   ],
-   "source": [
-    "knows_query = \"\"\"\n",
-    "SELECT DISTINCT ?target\n",
-    "WHERE\n",
-    "{\n",
-    "    skmo:빅뱅 schema:affiliation ?target\n",
-    "}\n",
-    "\"\"\"\n",
-    "\n",
-    "triple_list = []\n",
-    "qres = g.query(knows_query)\n",
-    "\n",
-    "for row in qres:\n",
-    "    print(row.target)"
    ]
   }
  ],
