indexing with tokenizer

--- a/notebooks/P01_index_generation.ipynb
+++ b/notebooks/P01_index_generation.ipynb
@@ -30,7 +30,8 @@
    "source": [
     "from owlready2 import *\n",
     "import pandas as pd\n",
-    "from elasticsearch import Elasticsearch"
+    "from elasticsearch import Elasticsearch\n",
+    "from konlpy.tag import Okt"
    ]
   },
   {
@@ -44,7 +45,9 @@
     "\n",
     "# Load owl file\n",
     "data_path = config['owl']['path']\n",
-    "onto = get_ontology(data_path).load()"
+    "onto = get_ontology(data_path).load()\n",
+    "\n",
+    "okt = Okt()"
    ]
   },
   {
@@ -82,10 +85,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_list = []\n",
-    "index_list.extend([(change_prefix(r), \"T_c\", r.label) for r in onto.classes()])\n",
-    "index_list.extend([(change_prefix(r), \"T_op\", r.label) for r in onto.object_properties()])\n",
-    "index_list.extend([(change_prefix(r), \"T_dp\", r.label) for r in onto.data_properties()])"
+    "def tokenize_query(input):\n",
+    "    query_pos = okt.pos(input, norm=True)\n",
+    "    query_terms = [q[0] for q in query_pos if q[1] not in [\"Josa\", \"Punctuation\"]]\n",
+    "    return ' '.join(query_terms)"
    ]
   },
   {
@@ -94,26 +97,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instance_list = []\n",
-    "for r in onto.individuals():\n",
-    "    if r.is_a[0] == Thing:  continue\n",
-    "    tbox = [change_prefix(t) for t in r.is_a]\n",
-    "    instance_list.append((change_prefix(r), \"T_i\", r.label, tbox))"
+    "def tokenize(label_list):\n",
+    "    return [tokenize_query(label) for label in label_list]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index has been deleted successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "index_list = []\n",
+    "index_list.extend([(change_prefix(r), \"T_c\", tokenize(r.label)) for r in onto.classes()])\n",
+    "index_list.extend([(change_prefix(r), \"T_op\", tokenize(r.label)) for r in onto.object_properties()])\n",
+    "index_list.extend([(change_prefix(r), \"T_dp\", tokenize(r.label)) for r in onto.data_properties()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instance_list = []\n",
+    "for r in onto.individuals():\n",
+    "    if r.is_a[0] == Thing:  continue\n",
+    "    tbox = [change_prefix(t) for t in r.is_a]\n",
+    "    instance_list.append((change_prefix(r), \"T_i\", tokenize(r.label), tbox))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if es.indices.exists(index=index_name):\n",
     "    es.indices.delete(index=index_name,ignore=[400, 404])\n",
@@ -122,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'_index': 'skmo',\n",
-       " '_id': '5G0eMosBDCkSKGCE7srI',\n",
+       " '_id': 'DMURhIsB6I_cUCn93eO0',\n",
        " '_version': 1,\n",
        " 'result': 'created',\n",
        " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
@@ -137,7 +154,7 @@
        " '_primary_term': 1}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
