--- a/notebooks/P00_pipeline.ipynb
+++ b/notebooks/P00_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
-      "\n",
-      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mapping import ResourceMapper\n",
     "from graph import *\n",
@@ -35,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['제니', '소속', '그룹']"
+       "['AOA', '부른', '발라드', '노래']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,27 +62,39 @@
     "# user_input = '가수 태연의 첫 데뷔곡은?'\n",
     "# user_input = '뱅뱅뱅 부른 음악그룹의 소속사는?'\n",
     "# user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
+    "# user_input = '작곡가이며 가수인 사람'\n",
     "# user_input = '장르가 발라드인 노래'\n",
-    "# user_input = '버벌진트가 피처링한 노래'\n",
+    "# user_input = '가수 버벌진트가 피처링한 노래'\n",
+    "# user_input = '태연이 처음 부른 노래는?'\n",
     "# user_input = '소녀시대의 리더는?'\n",
-    "user_input = '제니의 소속 그룹'\n",
+    "# user_input = '제니의 소속 그룹'\n",
     "# user_input = '레인을 작곡한 사람'\n",
+    "# user_input = '국적이 뉴질랜드 사람은?'\n",
+    "# user_input = '세월이 가면의 가수는?'\n",
+    "user_input = 'AOA 부른 발라드 노래는?'\n",
     "query_terms = rm.tokenize_query(user_input)\n",
     "query_terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['제니 소속 그룹'], ['제니', '소속 그룹'], ['제니 소속', '그룹'], ['제니', '소속', '그룹']]"
+       "[['AOA 부른 발라드 노래'],\n",
+       " ['AOA', '부른 발라드 노래'],\n",
+       " ['AOA 부른', '발라드 노래'],\n",
+       " ['AOA 부른 발라드', '노래'],\n",
+       " ['AOA', '부른', '발라드 노래'],\n",
+       " ['AOA', '부른 발라드', '노래'],\n",
+       " ['AOA 부른', '발라드', '노래'],\n",
+       " ['AOA', '부른', '발라드', '노래']]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['제니', '소속', '그룹']"
+       "['AOA', '부른', '발라드', '노래']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,17 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('skmo:제니', 'mo:member_of', 'foaf:Group'),\n",
-       " ('skmo:제니', 'schema:affiliation', 'foaf:Group')]"
+       "[('skmo:AOA', 'skmo:isSungBy', 'skmo:ballad', 'mo:Track')]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,17 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[('skmo:제니', 'mo:member_of', 'foaf:Group')],\n",
-       " [('skmo:제니', 'schema:affiliation', 'foaf:Group')]]"
+       "[[('skmo:AOA', 'skmo:isSungBy', 'skmo:ballad'),\n",
+       "  ('skmo:ballad', 'Any P', 'mo:Track')],\n",
+       " [('skmo:AOA', 'skmo:isSungBy', 'mo:Track'),\n",
+       "  ('skmo:ballad', 'Any P', 'mo:Track')]]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,18 +200,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.5,\n",
-       "  [('foaf:Person(skmo:제니)', 'mo:member_of', 'mo:MusicGroup'),\n",
-       "   ('mo:MusicGroup', 'rdfs:subClassOf', 'foaf:Group')])]"
+       "[(0.6241379310344828,\n",
+       "  [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
+       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]),\n",
+       " (0.41609195402298854,\n",
+       "  [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
+       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
+       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')]),\n",
+       " (0.23225806451612901,\n",
+       "  [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
+       "   ('mo:Track', 'skmo:isComposedBy', 'skmo:MusicArtist'),\n",
+       "   ('skmo:MusicArtist', 'rdfs:subClassOf', 'owl:Thing'),\n",
+       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
+       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')]),\n",
+       " (0.3,\n",
+       "  [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
+       "   ('mo:Track', 'skmo:isComposedBy', 'foaf:Organization'),\n",
+       "   ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing'),\n",
+       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
+       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')]),\n",
+       " (0.4,\n",
+       "  [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
+       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
+       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing'),\n",
+       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
+       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')])]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,17 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('foaf:Person(skmo:제니)', 'mo:member_of', 'mo:MusicGroup'),\n",
-       " ('mo:MusicGroup', 'rdfs:subClassOf', 'foaf:Group')]"
+       "[('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
+       " ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,16 +274,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('foaf:Person(skmo:제니)', 'mo:member_of', 'mo:MusicGroup')]"
+       "[('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
+       " ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,43 +296,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<USER Query>\n",
+      "용감한 형제가 작곡한 노래의 장르는?\n",
+      "\n",
+      "<SPARQL Query>\n",
       "SELECT DISTINCT ?target \n",
       "WHERE\n",
       "{\n",
-      "    skmo:제니 mo:member_of ?target\n",
-      "}\n"
+      "    ?x0 skmo:isComposedBy skmo:용감한_형제; skmo:hasGenre ?target\n",
+      "}\n",
+      "\n",
+      "<Answer>\n",
+      "k-pop  R&B  hip_hop  "
      ]
     }
    ],
    "source": [
+    "print('<USER Query>')\n",
+    "print(user_input)\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "print('<SPARQL Query>')\n",
     "knows_query = sc.generate_query(relation_triples)\n",
-    "print(knows_query)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://www.sktelecom.com/skmo/블랙핑크\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(knows_query)\n",
+    "\n",
     "result = sc.excute_query(knows_query)\n",
+    "print('\\n<Answer>')\n",
+    "# print(': ', end='')\n",
     "for r in result:\n",
-    "    print(r['target'])"
+    "    print(r['target'].rsplit('/')[-1], end='  ')"
    ]
   }
  ],
