--- a/notebooks/P00_pipeline.ipynb
+++ b/notebooks/P00_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from mapping import ResourceMapper\n",
     "from graph import *\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AOA', '부른', '발라드', '노래']"
+       "['용감한', '형제', '작곡', '노래', '장르']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +72,7 @@
    "source": [
     "# user_input = '가수 태연의 첫 데뷔곡은?'\n",
     "# user_input = '뱅뱅뱅 부른 음악그룹의 소속사는?'\n",
-    "# user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
+    "user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
     "# user_input = '작곡가이며 가수인 사람'\n",
     "# user_input = '장르가 발라드인 노래'\n",
     "# user_input = '가수 버벌진트가 피처링한 노래'\n",
@@ -71,30 +82,38 @@
     "# user_input = '레인을 작곡한 사람'\n",
     "# user_input = '국적이 뉴질랜드 사람은?'\n",
     "# user_input = '세월이 가면의 가수는?'\n",
-    "user_input = 'AOA 부른 발라드 노래는?'\n",
+    "# user_input = 'AOA 부른 발라드 노래는?'\n",
     "query_terms = rm.tokenize_query(user_input)\n",
     "query_terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['AOA 부른 발라드 노래'],\n",
-       " ['AOA', '부른 발라드 노래'],\n",
-       " ['AOA 부른', '발라드 노래'],\n",
-       " ['AOA 부른 발라드', '노래'],\n",
-       " ['AOA', '부른', '발라드 노래'],\n",
-       " ['AOA', '부른 발라드', '노래'],\n",
-       " ['AOA 부른', '발라드', '노래'],\n",
-       " ['AOA', '부른', '발라드', '노래']]"
+       "[['용감한 형제 작곡 노래 장르'],\n",
+       " ['용감한', '형제 작곡 노래 장르'],\n",
+       " ['용감한 형제', '작곡 노래 장르'],\n",
+       " ['용감한 형제 작곡', '노래 장르'],\n",
+       " ['용감한 형제 작곡 노래', '장르'],\n",
+       " ['용감한', '형제', '작곡 노래 장르'],\n",
+       " ['용감한', '형제 작곡', '노래 장르'],\n",
+       " ['용감한', '형제 작곡 노래', '장르'],\n",
+       " ['용감한 형제', '작곡', '노래 장르'],\n",
+       " ['용감한 형제', '작곡 노래', '장르'],\n",
+       " ['용감한 형제 작곡', '노래', '장르'],\n",
+       " ['용감한', '형제', '작곡', '노래 장르'],\n",
+       " ['용감한', '형제', '작곡 노래', '장르'],\n",
+       " ['용감한', '형제 작곡', '노래', '장르'],\n",
+       " ['용감한 형제', '작곡', '노래', '장르'],\n",
+       " ['용감한', '형제', '작곡', '노래', '장르']]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AOA', '부른', '발라드', '노래']"
+       "['용감한 형제', '작곡', '노래', '장르']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,16 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('skmo:AOA', 'skmo:isSungBy', 'skmo:ballad', 'mo:Track')]"
+       "[('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track', 'skmo:Genre'),\n",
+       " ('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track', 'skmo:hasGenre')]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,19 +189,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[('skmo:AOA', 'skmo:isSungBy', 'skmo:ballad'),\n",
-       "  ('skmo:ballad', 'Any P', 'mo:Track')],\n",
-       " [('skmo:AOA', 'skmo:isSungBy', 'mo:Track'),\n",
-       "  ('skmo:ballad', 'Any P', 'mo:Track')]]"
+       "[[('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
+       "  ('mo:Track', 'Any P', 'skmo:Genre')],\n",
+       " [('skmo:용감한_형제', 'skmo:isComposedBy', 'skmo:Genre'),\n",
+       "  ('mo:Track', 'Any P', 'skmo:Genre')],\n",
+       " [('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
+       "  ('mo:Track', 'skmo:hasGenre', 'owl:Thing')],\n",
+       " [('skmo:용감한_형제', 'skmo:isComposedBy', 'owl:Thing'),\n",
+       "  ('mo:Track', 'skmo:hasGenre', 'owl:Thing')],\n",
+       " [('skmo:용감한_형제', 'skmo:hasGenre', 'owl:Thing'),\n",
+       "  ('mo:Track', 'skmo:hasGenre', 'owl:Thing')]]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +226,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('skmo:용감한_형제',\n",
+       "  'skmo:isComposedBy',\n",
+       "  'mo:Track'): [(0.7517241379310344,\n",
+       "   [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)')])],\n",
+       " ('mo:Track',\n",
+       "  'Any P',\n",
+       "  'skmo:Genre'): [(0.0, [('mo:Track', 'skmo:hasGenre', 'skmo:Genre')])],\n",
+       " ('skmo:용감한_형제', 'skmo:isComposedBy', 'skmo:Genre'): [],\n",
+       " ('mo:Track',\n",
+       "  'skmo:hasGenre',\n",
+       "  'owl:Thing'): [(0.0,\n",
+       "   [('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
+       "    ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')])],\n",
+       " ('skmo:용감한_형제',\n",
+       "  'skmo:isComposedBy',\n",
+       "  'owl:Thing'): [(0.8387096774193549,\n",
+       "   [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
+       "    ('mo:Track', 'skmo:isComposedBy', 'skmo:MusicArtist'),\n",
+       "    ('skmo:MusicArtist', 'rdfs:subClassOf', 'owl:Thing')]), (0.5,\n",
+       "   [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
+       "    ('mo:Track', 'skmo:isComposedBy', 'foaf:Organization'),\n",
+       "    ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')])],\n",
+       " ('skmo:용감한_형제',\n",
+       "  'skmo:hasGenre',\n",
+       "  'owl:Thing'): [(0.0,\n",
+       "   [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
+       "    ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
+       "    ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')])]}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shortest_path_dict = qgg.search_at_tbox_level(conceptual_graph)\n",
+    "shortest_path_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -233,13 +307,13 @@
        "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')])]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query_graph = qgg.generate_query_graph(conceptual_graph)\n",
+    "query_graph = qgg.generate_query_graph(conceptual_graph, shortest_path_dict)\n",
     "query_graph"
    ]
   },
@@ -252,7 +326,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k-pop  R&B  hip_hop  "
+     ]
+    }
+   ],
+   "source": [
+    "sc.process(query_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +353,7 @@
        " ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +375,7 @@
        " ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -328,11 +419,10 @@
     "knows_query = sc.generate_query(relation_triples)\n",
     "print(knows_query)\n",
     "\n",
-    "result = sc.excute_query(knows_query)\n",
+    "\n",
     "print('\\n<Answer>')\n",
-    "# print(': ', end='')\n",
-    "for r in result:\n",
-    "    print(r['target'].rsplit('/')[-1], end='  ')"
+    "result = sc.excute_query(knows_query)\n",
+    "sc.print_result(result)"
    ]
   }
  ],
