leftmost element owl:Thing

--- a/notebooks/P00_pipeline.ipynb
+++ b/notebooks/P00_pipeline.ipynb
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['용감한', '형제', '작곡', '노래', '장르']"
+       "['국적', '뉴질랜드', '사람']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
    "source": [
     "# user_input = '가수 태연의 첫 데뷔곡은?'\n",
     "# user_input = '뱅뱅뱅 부른 음악그룹의 소속사는?'\n",
-    "user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
+    "# user_input = '용감한 형제가 작곡한 노래의 장르는?'\n",
     "# user_input = '작곡가이며 가수인 사람'\n",
     "# user_input = '장르가 발라드인 노래'\n",
     "# user_input = '가수 버벌진트가 피처링한 노래'\n",
@@ -80,7 +80,7 @@
     "# user_input = '소녀시대의 리더는?'\n",
     "# user_input = '제니의 소속 그룹'\n",
     "# user_input = '레인을 작곡한 사람'\n",
-    "# user_input = '국적이 뉴질랜드 사람은?'\n",
+    "user_input = '국적이 뉴질랜드 사람은?'\n",
     "# user_input = '세월이 가면의 가수는?'\n",
     "# user_input = 'AOA 부른 발라드 노래는?'\n",
     "query_terms = rm.tokenize_query(user_input)\n",
@@ -89,31 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['용감한 형제 작곡 노래 장르'],\n",
-       " ['용감한', '형제 작곡 노래 장르'],\n",
-       " ['용감한 형제', '작곡 노래 장르'],\n",
-       " ['용감한 형제 작곡', '노래 장르'],\n",
-       " ['용감한 형제 작곡 노래', '장르'],\n",
-       " ['용감한', '형제', '작곡 노래 장르'],\n",
-       " ['용감한', '형제 작곡', '노래 장르'],\n",
-       " ['용감한', '형제 작곡 노래', '장르'],\n",
-       " ['용감한 형제', '작곡', '노래 장르'],\n",
-       " ['용감한 형제', '작곡 노래', '장르'],\n",
-       " ['용감한 형제 작곡', '노래', '장르'],\n",
-       " ['용감한', '형제', '작곡', '노래 장르'],\n",
-       " ['용감한', '형제', '작곡 노래', '장르'],\n",
-       " ['용감한', '형제 작곡', '노래', '장르'],\n",
-       " ['용감한 형제', '작곡', '노래', '장르'],\n",
-       " ['용감한', '형제', '작곡', '노래', '장르']]"
+       "[['국적 뉴질랜드 사람'], ['국적', '뉴질랜드 사람'], ['국적 뉴질랜드', '사람'], ['국적', '뉴질랜드', '사람']]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,16 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['용감한 형제', '작곡', '노래', '장르']"
+       "['국적', '뉴질랜드', '사람']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,17 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track', 'skmo:Genre'),\n",
-       " ('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track', 'skmo:hasGenre')]"
+       "[('schema:nationality', 'skmo:뉴질랜드', 'foaf:Person')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,25 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
-       "  ('mo:Track', 'Any P', 'skmo:Genre')],\n",
-       " [('skmo:용감한_형제', 'skmo:isComposedBy', 'skmo:Genre'),\n",
-       "  ('mo:Track', 'Any P', 'skmo:Genre')],\n",
-       " [('skmo:용감한_형제', 'skmo:isComposedBy', 'mo:Track'),\n",
-       "  ('mo:Track', 'skmo:hasGenre', 'owl:Thing')],\n",
-       " [('skmo:용감한_형제', 'skmo:isComposedBy', 'owl:Thing'),\n",
-       "  ('mo:Track', 'skmo:hasGenre', 'owl:Thing')],\n",
-       " [('skmo:용감한_형제', 'skmo:hasGenre', 'owl:Thing'),\n",
-       "  ('mo:Track', 'skmo:hasGenre', 'owl:Thing')]]"
+       "[[('owl:Thing', 'schema:nationality', 'skmo:뉴질랜드'),\n",
+       "  ('skmo:뉴질랜드', 'Any P', 'foaf:Person')],\n",
+       " [('owl:Thing', 'schema:nationality', 'foaf:Person'),\n",
+       "  ('skmo:뉴질랜드', 'Any P', 'foaf:Person')]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,43 +204,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{('skmo:용감한_형제',\n",
-       "  'skmo:isComposedBy',\n",
-       "  'mo:Track'): [(0.7517241379310344,\n",
-       "   [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)')])],\n",
-       " ('mo:Track',\n",
+       "{('owl:Thing', 'schema:nationality', 'skmo:뉴질랜드'): [],\n",
+       " ('skmo:뉴질랜드',\n",
        "  'Any P',\n",
-       "  'skmo:Genre'): [(0.0, [('mo:Track', 'skmo:hasGenre', 'skmo:Genre')])],\n",
-       " ('skmo:용감한_형제', 'skmo:isComposedBy', 'skmo:Genre'): [],\n",
-       " ('mo:Track',\n",
-       "  'skmo:hasGenre',\n",
-       "  'owl:Thing'): [(0.0,\n",
-       "   [('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
-       "    ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')])],\n",
-       " ('skmo:용감한_형제',\n",
-       "  'skmo:isComposedBy',\n",
-       "  'owl:Thing'): [(0.8387096774193549,\n",
-       "   [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
-       "    ('mo:Track', 'skmo:isComposedBy', 'skmo:MusicArtist'),\n",
-       "    ('skmo:MusicArtist', 'rdfs:subClassOf', 'owl:Thing')]), (0.5,\n",
-       "   [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
-       "    ('mo:Track', 'skmo:isComposedBy', 'foaf:Organization'),\n",
-       "    ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing')])],\n",
-       " ('skmo:용감한_형제',\n",
-       "  'skmo:hasGenre',\n",
-       "  'owl:Thing'): [(0.0,\n",
-       "   [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
-       "    ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
-       "    ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')])]}"
+       "  'foaf:Person'): [(0.0,\n",
+       "   [('foaf:Person', 'schema:nationality', 'schema:Country(skmo:뉴질랜드)')])],\n",
+       " ('owl:Thing',\n",
+       "  'schema:nationality',\n",
+       "  'foaf:Person'): [(0.0,\n",
+       "   [('foaf:Person', 'schema:nationality', 'schema:Country'),\n",
+       "    ('schema:Country', 'rdfs:subClassOf', 'owl:Thing')])]}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,40 +234,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.6241379310344828,\n",
-       "  [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
-       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]),\n",
-       " (0.41609195402298854,\n",
-       "  [('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
-       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
-       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')]),\n",
-       " (0.23225806451612901,\n",
-       "  [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
-       "   ('mo:Track', 'skmo:isComposedBy', 'skmo:MusicArtist'),\n",
-       "   ('skmo:MusicArtist', 'rdfs:subClassOf', 'owl:Thing'),\n",
-       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
-       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')]),\n",
-       " (0.3,\n",
-       "  [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
-       "   ('mo:Track', 'skmo:isComposedBy', 'foaf:Organization'),\n",
-       "   ('foaf:Organization', 'rdfs:subClassOf', 'owl:Thing'),\n",
-       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
-       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')]),\n",
-       " (0.4,\n",
-       "  [('foaf:Person(skmo:용감한_형제)', 'skmo:debutTrack', 'mo:Track'),\n",
-       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
-       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing'),\n",
-       "   ('mo:Track', 'skmo:hasGenre', 'skmo:Genre'),\n",
-       "   ('skmo:Genre', 'rdfs:subClassOf', 'owl:Thing')])]"
+       "[(0.6666666666666666,\n",
+       "  [('foaf:Person', 'schema:nationality', 'schema:Country'),\n",
+       "   ('schema:Country', 'rdfs:subClassOf', 'owl:Thing'),\n",
+       "   ('foaf:Person', 'schema:nationality', 'schema:Country(skmo:뉴질랜드)')])]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,34 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "k-pop  R&B  hip_hop  "
-     ]
-    }
-   ],
-   "source": [
-    "sc.process(query_graph)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
-       " ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]"
+       "[('foaf:Person', 'schema:nationality', 'schema:Country'),\n",
+       " ('schema:Country', 'rdfs:subClassOf', 'owl:Thing'),\n",
+       " ('foaf:Person', 'schema:nationality', 'schema:Country(skmo:뉴질랜드)')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,17 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('mo:Track', 'skmo:isComposedBy', 'foaf:Person(skmo:용감한_형제)'),\n",
-       " ('mo:Track', 'skmo:hasGenre', 'skmo:Genre')]"
+       "[('foaf:Person', 'schema:nationality', 'schema:Country'),\n",
+       " ('foaf:Person', 'schema:nationality', 'schema:Country(skmo:뉴질랜드)')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -395,17 +318,17 @@
      "output_type": "stream",
      "text": [
       "<USER Query>\n",
-      "용감한 형제가 작곡한 노래의 장르는?\n",
+      "국적이 뉴질랜드 사람은?\n",
       "\n",
       "<SPARQL Query>\n",
       "SELECT DISTINCT ?target \n",
       "WHERE\n",
       "{\n",
-      "    ?x0 skmo:isComposedBy skmo:용감한_형제; skmo:hasGenre ?target\n",
+      "    ?target schema:nationality ?x0; schema:nationality skmo:뉴질랜드\n",
       "}\n",
       "\n",
       "<Answer>\n",
-      "k-pop  R&B  hip_hop  "
+      "로제  "
      ]
     }
    ],
