--- a/notebooks/P01_index_generation.ipynb
+++ b/notebooks/P01_index_generation.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'_index': 'skmo',\n",
-       " '_id': 'DMURhIsB6I_cUCn93eO0',\n",
+       " '_id': 'rr46k4sBJyIE9Xr096nt',\n",
        " '_version': 1,\n",
        " 'result': 'created',\n",
        " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
@@ -154,19 +154,21 @@
        " '_primary_term': 1}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# thing_list = ['언제', '누구', '무엇', '뭐']\n",
+    "# doc = {'URI':'owl:Thing', 'Type':'T_c', 'Annotation Values':thing_list}\n",
     "doc = {'URI':'owl:Thing', 'Type':'T_c'}\n",
     "es.index(index=index_name, body=doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
