re-upload pipeline code

--- a/notebooks/P00_pipeline.ipynb
+++ b/notebooks/P00_pipeline.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "['국적', '뉴질랜드', '사람']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,15 +81,55 @@
     "# user_input = '제니의 소속 그룹'\n",
     "# user_input = '레인을 작곡한 사람'\n",
     "user_input = '국적이 뉴질랜드 사람은?'\n",
+    "# user_input = 'AOA 부른 발라드 노래'\n",
     "# user_input = '세월이 가면의 가수는?'\n",
-    "# user_input = 'AOA 부른 발라드 노래는?'\n",
+    "# user_input = 'AOA 발라드 노래?'\n",
+    "# user_input = '지드래곤 노래'\n",
     "query_terms = rm.tokenize_query(user_input)\n",
     "query_terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dependent_idx = -1\n",
+    "for t_idx, token in enumerate(query_terms):\n",
+    "    if token in ['무슨', '어느', '어떻다', '몇']:\n",
+    "        dependent_idx = t_idx \n",
+    "        break\n",
+    "\n",
+    "if dependent_idx >= 0:\n",
+    "    new_query_terms = query_terms[:dependent_idx] + query_terms[dependent_idx+2:] + [query_terms[dependent_idx+1]]\n",
+    "else:\n",
+    "    new_query_terms = query_terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['국적', '뉴질랜드', '사람']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_query_terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +138,13 @@
        "[['국적 뉴질랜드 사람'], ['국적', '뉴질랜드 사람'], ['국적 뉴질랜드', '사람'], ['국적', '뉴질랜드', '사람']]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query_patitions = rm.partition_query(query_terms)\n",
+    "query_patitions = rm.partition_query(new_query_terms)\n",
     "query_patitions"
    ]
   },
@@ -117,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +166,7 @@
        "['국적', '뉴질랜드', '사람']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +194,7 @@
        "[('schema:nationality', 'skmo:뉴질랜드', 'foaf:Person')]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +225,7 @@
        "  ('skmo:뉴질랜드', 'Any P', 'foaf:Person')]]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +262,7 @@
        "    ('schema:Country', 'rdfs:subClassOf', 'owl:Thing')])]}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +286,7 @@
        "   ('foaf:Person', 'schema:nationality', 'schema:Country(skmo:뉴질랜드)')])]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +316,7 @@
        " ('foaf:Person', 'schema:nationality', 'schema:Country(skmo:뉴질랜드)')]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +338,7 @@
        " ('foaf:Person', 'schema:nationality', 'schema:Country(skmo:뉴질랜드)')]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
